[package]
name = "terminal_colors"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library for coloring terminal text."
repository = "https://github.com/ligvigfui/terminal-colors"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
